# uuid_altenc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
comparison/: README.md  pubspec.yaml
comparison/lib/constants/: alphabets.dart
comparison/lib/encoders/: base62id_uuid.dart  base85_uuid.dart  uuid_ncname.dart
examples/: demo.rs  webui.rs  webui_index.html
src/: alphabets.rs  base16.rs  base32_64.rs  base62id.rs  base85.rs  bitstream.rs  error.rs  integer_base.rs  integer_encodings.rs  lib.rs  ncname.rs  serde_impl.rs
tests/: appendix_c.rs  properties.rs  rfc9562_conformance.rs  security.rs
